RESOLVED FIXED43955
Chromium DevTools: [CRASH] Autocomplete on arrays causes crashes.
https://bugs.webkit.org/show_bug.cgi?id=43955
Summary Chromium DevTools: [CRASH] Autocomplete on arrays causes crashes.
Pavel Feldman
Reported 2010-08-13 01:13:12 PDT
Patch to follow.
Attachments
[PATCH] Proposed fix. (1.36 KB, patch)
2010-08-13 01:14 PDT, Pavel Feldman
no flags
Pavel Feldman
Comment 1 2010-08-13 01:14:45 PDT
Created attachment 64311 [details] [PATCH] Proposed fix.
Pavel Feldman
Comment 2 2010-08-13 01:43:14 PDT
Comment on attachment 64311 [details] [PATCH] Proposed fix. Clearing flags on attachment: 64311 Committed r65307: <http://trac.webkit.org/changeset/65307>
Pavel Feldman
Comment 3 2010-08-13 01:43:22 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.