2010-08-13  Pavel Feldman  <pfeldman@chromium.org>

Reviewed by Yury Semikhatsky.

        Chromium DevTools: [CRASH] Autocomplete on arrays causes crashes.
        https://bugs.webkit.org/show_bug.cgi?id=43955

        * bindings/v8/ScriptValue.cpp:
        (WebCore::v8ToInspectorValue):

Canonical link: https://commits.webkit.org/56107@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@65307 268f45cc-cd09-0410-ab3c-d52691b4dbfc